2010-02-28  Chong Yidong  <cyd@stupidchicken.com>

	* textmodes/reftex-toc.el (reftex-toc-promote-prepare):
	* emacs-lisp/elint.el (elint-add-required-env):
	* cedet/semantic/db-find.el
	(semanticdb-find-translate-path-brutish-default):
	* cedet/ede/make.el (ede-make-check-version):
	* calendar/icalendar.el (icalendar--add-diary-entry):
	* calc/calcalg2.el (math-tracing-integral):
	* files.el (recover-session-finish): Use with-current-buffer
	instead of save-excursion.

2010-02-27  Stefan Monnier  <monnier@iro.umontreal.ca>

	Fix in-buffer completion when after-change-functions modify the buffer.
	* minibuffer.el (completion--replace): New function.
	(completion--do-completion): Use it and use relative movement.

2010-02-27  Chong Yidong  <cyd@stupidchicken.com>

	* international/fontset.el (setup-default-fontset): Fix :otf spec.

2010-02-27  Jeremy Whitlock  <jcscoobyrs@gmail.com>  (tiny change)

	* progmodes/python.el (python-pdbtrack-stack-entry-regexp):
	Allow the characters _<> in the stack entry (Bug#5653).

2010-02-26  Kenichi Handa  <handa@m17n.org>

	* language/burmese.el: Fix entries in composition-function-table.
	(myanmar-composable-pattern): New variable.

	* international/fontset.el (setup-default-fontset): Add an entry
	for myanmar.

	* international/characters.el (script-list): Add Myanmar
	Extended-A.

2010-02-26  Glenn Morris  <rgm@gnu.org>

	* custom.el (custom-initialize-delay): Doc fix.

	* mail/sendmail.el (send-mail-function): Autoload the call
	to custom-initialize-delay, not otherwise preserved in loaddefs.el.

2010-02-25  Alan Mackenzie  <acm@muc.de>

	* progmodes/cc-engine.el (c-clear-<-pair-props)
	(c-clear->-pair-props): Correct to wipe category text props, not
	syntax-table ones.

	* progmodes/cc-mode.el (c-after-change): Remove any hard
	syntax-table properties for <, > which, e.g., C-y has
	inopportunely converted from category properties.

2010-02-24  Chong Yidong  <cyd@stupidchicken.com>
